--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "app.js",
   "scripts": {
     "start-server": "nodemon --exec babel-node --presets @babel/preset-env ./app/app.js",
-    "test": "./node_modules/.bin/mocha --require @babel/register ./app/test/**/*.js --exit",
+    "test": "mocha --require @babel/register ./app/test/**/*.js --exit",
     "dev": "nodemon --exec babel-node --presets @babel/preset-env"
   },
   "author": "John Ametepe Agboku",
@@ -17,15 +17,22 @@
     "bcryptjs": "^2.4.3",
     "bull": "^4.16.5",
     "chai-http": "^5.1.1",
+    "cors": "^2.8.5",
     "csv-parse": "^5.6.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^7.5.0",
+    "express-slow-down": "^2.0.3",
+    "helmet": "^8.0.0",
     "image-thumbnail": "^1.0.17",
     "jsonwebtoken": "^9.0.2",
     "mime-types": "^2.1.35",
     "mongodb": "^6.12.0",
+    "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
     "redis": "^4.7.0",
     "sha1": "^1.1.1",
+    "socket.io": "^4.8.1",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
@@ -34,6 +41,8 @@
     "@babel/node": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@babel/register": "^7.25.9",
+    "@types/chai": "^5.0.1",
+    "@types/sinon": "^17.0.3",
     "chai": "^5.1.2",
     "eslint": "^8.57.1",
     "eslint-config-airbnb-base": "^15.0.0",
