--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "start-server": "nodemon --exec babel-node --presets @babel/preset-env ./app/app.js",
+    "start-server": "nodemon --exec babel-node --presets @babel/preset-env ./app/server.js",
     "test": "mocha --require @babel/register ./app/test/**/*.js --exit",
     "dev": "nodemon --exec babel-node --presets @babel/preset-env"
   },
@@ -29,11 +29,15 @@
     "mime-types": "^2.1.35",
     "mongodb": "^6.12.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "redis": "^4.7.0",
     "sha1": "^1.1.1",
     "socket.io": "^4.8.1",
-    "uuid": "^11.0.3"
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "uuid": "^11.0.3",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.26.4",
