--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@babel/node": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@babel/register": "^7.25.9",
+    "@eslint/js": "^9.17.0",
     "@types/chai": "^5.0.1",
     "@types/sinon": "^17.0.3",
     "chai": "^5.1.2",
@@ -52,6 +53,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jest": "^28.10.0",
+    "globals": "^15.14.0",
     "mocha": "^11.0.1",
     "nodemon": "^3.1.9",
     "proxyquire": "^2.1.3",
