--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.0",
     "redis": "^4.7.0",
     "sha1": "^1.1.1",
     "socket.io": "^4.8.1",
