--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node ./app/app.js",
-    "test": "mocha --require @babel/register ./app/test/**/*.js --exit",
+    "test": "npx mocha --recursive --exit --timeout 5000 --require @babel/register ./app/test/**/*.js --reporter spec",
     "dev": "nodemon --exec babel-node --presets @babel/preset-env",
     "lint": "./node_modules/.bin/eslint ."
   },
@@ -16,6 +16,7 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "mongodb-memory-server": "^10.1.4",
     "mongoose": "^8.16.3"
   },
   "devDependencies": {
@@ -28,6 +29,7 @@
     "@types/chai": "^5.2.2",
     "@types/sinon": "^17.0.4",
     "chai": "^5.2.1",
+    "mocha": "^11.7.1",
     "nodemon": "^3.1.10",
     "sinon": "^21.0.0"
   }
