--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "mongodb-memory-server": "^10.1.4",
-    "mongoose": "^8.16.3"
+    "mongoose": "^8.16.3",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.0",
