--- a/package.json
+++ b/package.json
@@ -8,22 +8,30 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon ./app/app.js",
+    "admin": "nodemon admin-console.js",
     "test": "npx mocha --recursive --exit --timeout 5000 --require @babel/register ./app/test/**/*.js --reporter spec",
-    "dev": "nodemon --exec babel-node --presets @babel/preset-env",
-    "lint": "./node_modules/.bin/eslint ."
+    "dev": "nodemon --exec babel-node --presets @babel/preset-env ./app/app.js",
+    "lint": "./node_modules/.bin/eslint .",
+    "seed": "node seed-database.js",
+    "seed:clear": "node seed-database.js --clear-only"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "chalk": "^4.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
+    "figlet": "^1.8.2",
+    "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb-memory-server": "^10.1.4",
     "mongoose": "^8.16.3",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.5",
     "validator": "^13.15.15",
     "winston": "^3.17.0"
   },
