Added swagger documentation to controllers

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,11 @@ HOST=localhost
 API_VERSION=1.0.0
 NODE_ENV=development
 
+# Paystack Configuration
+PAYSTACK_SECRET_KEY=sk_test_4f1e1e8a66187da4be79551ffd1eb7a80c373e91
+PAYSTACK_PUBLIC_KEY=pk_test_fcb27f4dc8f032b0d7b314407b08d02493dd2f4f
+PAYSTACK_WEBHOOK_SECRET=your_webhook_secret_here
+
 # Database Configuration
 DB_HOST=localhost
 DB_PORT=27017
