--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "validator": "^13.15.15",
     "winston": "^3.17.0"
   },
