feat: Add HealthCheckService for comprehensive application health monitoring
feat: Implement NotificationService for managing notifications and email alerts

fix: Update PaymentService to handle bundle categories correctly

feat: Create SettingsService for managing application settings and defaults

feat: Enhance SlideService with gallery slide creation from events

fix: Update UserService to include status in search filters

feat: Extend VotingService with simple vote casting and validation

chore: Update service index to include new services

chore: Add geoip-lite dependency for geolocation features

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,292 @@
-# Server Configuration
+# =============================================================================
+# ITFY E-VOTING APPLICATION - ENVIRONMENT CONFIGURATION
+# =============================================================================
+# Copy this file to .env and update with your actual values
+# This file contains all environment variables used by the application
+
+# =============================================================================
+# APPLICATION CONFIGURATION
+# =============================================================================
+APP_NAME=ITFY E-Voting Application
+APP_VERSION=1.0.0
+APP_URL=https://voting.itfy.com
+NODE_ENV=development
 PORT=3000
 HOST=localhost
 API_VERSION=1.0.0
-NODE_ENV=development
+TIMEZONE=UTC
+DEBUG=false
 
-# Paystack Configuration
-PAYSTACK_SECRET_KEY=sk_test_4f1e1e8a66187da4be79551ffd1eb7a80c373e91
-PAYSTACK_PUBLIC_KEY=pk_test_fcb27f4dc8f032b0d7b314407b08d02493dd2f4f
-PAYSTACK_WEBHOOK_SECRET=your_webhook_secret_here
+# =============================================================================
+# DATABASE CONFIGURATION
+# =============================================================================
+MONGODB_URI=mongodb://localhost:27017/itfy-evoting
+MONGODB_TEST_URI=mongodb://localhost:27017/itfy-evoting-test
 
-# Database Configuration
+# Legacy Database Variables (backwards compatibility)
 DB_HOST=localhost
 DB_PORT=27017
 DB_USER=
 DB_PASSWORD=
 DB_NAME=itfy_evoting
 
-# JWT Configuration
-JWT_SECRET=your_super_secret_jwt_key_here
-JWT_EXPIRES_IN=24h
+# Database Connection Pool Settings
+DB_MAX_POOL_SIZE=10
+DB_MIN_POOL_SIZE=2
+DB_MAX_IDLE_TIME=30000
+DB_SERVER_SELECTION_TIMEOUT=5000
+DB_SOCKET_TIMEOUT=45000
+DB_RETRY_WRITES=true
 
-# File Upload Configuration
+# =============================================================================
+# AUTHENTICATION & SECURITY
+# =============================================================================
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-minimum-32-characters
+JWT_EXPIRES_IN=24h
+JWT_REFRESH_EXPIRES_IN=7d
+JWT_ALGORITHM=HS256
+JWT_ISSUER=e-voting-app
+
+# Session Configuration
+SESSION_SECRET=your-session-secret-key-minimum-32-characters
+
+# Password Hashing
+BCRYPT_ROUNDS=12
+
+# Data Encryption
+ENCRYPTION_ALGORITHM=aes-256-gcm
+ENCRYPTION_KEY=your-encryption-key-32-characters
+
+# =============================================================================
+# CORS & SECURITY
+# =============================================================================
+# Comma-separated list of allowed origins
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:3001,https://voting.itfy.com
+CORS_CREDENTIALS=true
+
+# =============================================================================
+# EMAIL SERVICE CONFIGURATION
+# =============================================================================
+# Email Service Toggle
+EMAIL_ENABLED=true
+EMAIL_PROVIDER=smtp
+
+# SMTP Configuration
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your-email@gmail.com
+SMTP_PASSWORD=your-app-password-here
+
+# Alternative Email Variables (backwards compatibility)
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASSWORD=your-app-password-here
+
+# Sender Information
+EMAIL_FROM_NAME=ITFY E-Voting System
+EMAIL_FROM_ADDRESS=noreply@evoting.app
+FROM_EMAIL=your-email@gmail.com
+FROM_NAME=ITFY E-Voting System
+
+# Contact Emails
+SUPPORT_EMAIL=support@itfy.com
+ADMIN_EMAIL=admin@itfy.com
+
+# Email Templates
+EMAIL_TEMPLATES_PATH=./app/templates/email
+
+# Email Rate Limiting
+EMAIL_RATE_LIMIT_MS=1000
+
+# =============================================================================
+# PAYMENT CONFIGURATION (PAYSTACK)
+# =============================================================================
+# Payment Service Toggle
+PAYMENT_ENABLED=true
+PAYMENT_SERVICE_URL=https://api.paystack.co
+PAYMENT_API_KEY=your-payment-api-key
+PAYMENT_CURRENCY=USD
+PAYMENT_SANDBOX=true
+
+# Paystack API Keys
+PAYSTACK_SECRET_KEY=sk_test_your_paystack_secret_key
+PAYSTACK_PUBLIC_KEY=pk_test_your_paystack_public_key
+PAYSTACK_WEBHOOK_SECRET=your_webhook_secret
+
+# =============================================================================
+# FILE STORAGE CONFIGURATION
+# =============================================================================
+# Storage Provider (local, s3)
+STORAGE_PROVIDER=local
+
+# Local Storage
+LOCAL_UPLOAD_DIR=./uploads
 UPLOAD_PATH=./uploads
-MAX_FILE_SIZE=5242880
+MAX_FILE_SIZE=10485760
+# Comma-separated file types
+ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,image/webp,application/pdf,text/plain
+
+# AWS S3 Configuration (if using S3)
+AWS_S3_BUCKET=your-s3-bucket-name
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=your-aws-access-key-id
+AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
+
+# =============================================================================
+# CACHE CONFIGURATION
+# =============================================================================
+# Cache Provider (memory, redis)
+CACHE_PROVIDER=memory
+
+# Memory Cache Settings
+CACHE_MAX_SIZE=1000
+CACHE_DEFAULT_TTL=3600000
+
+# Redis Configuration (if using Redis)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=your-redis-password
+REDIS_DB=0
+REDIS_KEY_PREFIX=evoting:
+
+# =============================================================================
+# LOGGING CONFIGURATION
+# =============================================================================
+LOG_LEVEL=info
+LOG_FORMAT=combined
+LOG_TO_FILE=false
+LOG_TO_CONSOLE=true
+LOG_COLORIZE=true
+
+# File Logging (if enabled)
+LOG_DIRECTORY=./logs
+LOG_MAX_SIZE=20m
+LOG_MAX_FILES=14
+LOG_DATE_PATTERN=YYYY-MM-DD
+
+# =============================================================================
+# MONITORING & HEALTH CHECK
+# =============================================================================
+MONITORING_ENABLED=false
+HEALTH_CHECK_PATH=/health
+HEALTH_CHECK_TIMEOUT=5000
+METRICS_ENABLED=false
+METRICS_PATH=/metrics
+
+# =============================================================================
+# DEVELOPMENT CONFIGURATION
+# =============================================================================
+HOT_RELOAD=false
+VERBOSE=false
+MOCK_DATA=false
+
+# =============================================================================
+# WEBHOOKS & INTEGRATIONS
+# =============================================================================
+# Webhook URLs for external integrations
+WEBHOOK_URL=https://your-domain.com/api/webhooks
+WEBHOOK_SECRET=your-webhook-secret-key
+
+# =============================================================================
+# RATE LIMITING
+# =============================================================================
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100
+
+# =============================================================================
+# SSL/TLS CONFIGURATION
+# =============================================================================
+SSL_ENABLED=false
+SSL_CERT_PATH=./certs/cert.pem
+SSL_KEY_PATH=./certs/key.pem
+
+# =============================================================================
+# ANALYTICS & TRACKING
+# =============================================================================
+ANALYTICS_ENABLED=true
+GOOGLE_ANALYTICS_ID=your-google-analytics-id
+TRACKING_ENABLED=false
+
+# =============================================================================
+# FEATURE FLAGS
+# =============================================================================
+FEATURE_REGISTRATION_ENABLED=true
+FEATURE_PAYMENT_ENABLED=true
+FEATURE_EMAIL_NOTIFICATIONS=true
+FEATURE_ANALYTICS_DASHBOARD=true
+FEATURE_ADMIN_CONSOLE=true
+
+# =============================================================================
+# LOGO & BRANDING
+# =============================================================================
+LOGO_URL=https://voting.itfy.com/assets/logo.png
+FAVICON_URL=https://voting.itfy.com/assets/favicon.ico
+BRAND_COLOR=#007bff
+
+# =============================================================================
+# SECURITY HEADERS
+# =============================================================================
+CONTENT_SECURITY_POLICY=default-src 'self'
+X_FRAME_OPTIONS=DENY
+X_CONTENT_TYPE_OPTIONS=nosniff
+
+# =============================================================================
+# ENVIRONMENT-SPECIFIC OVERRIDES
+# =============================================================================
+# Development
+# NODE_ENV=development
+# DEBUG=true
+# VERBOSE=true
+# MOCK_DATA=true
+
+# Production
+# NODE_ENV=production
+# DEBUG=false
+# LOG_TO_FILE=true
+# MONITORING_ENABLED=true
+# SSL_ENABLED=true
+
+# Testing
+# NODE_ENV=test
+# MONGODB_URI=mongodb://localhost:27017/itfy-evoting-test
+# EMAIL_ENABLED=false
+# PAYMENT_ENABLED=false
+
+# =============================================================================
+# SETUP INSTRUCTIONS
+# =============================================================================
+# 
+# 1. Copy this file to .env in your project root
+# 2. Update all placeholder values with your actual configuration
+# 3. Never commit your .env file to version control
+# 4. For production, use environment variables or secure secret management
+# 
+# REQUIRED VARIABLES (minimum to start):
+# - MONGODB_URI
+# - JWT_SECRET
+# - SESSION_SECRET
+# - ENCRYPTION_KEY
+# 
+# FOR EMAIL FUNCTIONALITY:
+# - SMTP_HOST, SMTP_USER, SMTP_PASSWORD
+# - EMAIL_FROM_ADDRESS, ADMIN_EMAIL
+# 
+# FOR PAYMENTS:
+# - PAYSTACK_SECRET_KEY, PAYSTACK_PUBLIC_KEY
+# - PAYSTACK_WEBHOOK_SECRET
+# 
+# SECURITY NOTES:
+# - All secret keys should be at least 32 characters long
+# - Use strong, random values for JWT_SECRET, SESSION_SECRET, ENCRYPTION_KEY
+# - For Gmail, use App Passwords, not your regular password
+# - In production, use environment variables or AWS Secrets Manager
+# 
+# TESTING:
+# - Run: node test_email_integration.js (test email configuration)
+# - Run: node validate_payment_system.js (test payment configuration)
+# - Run: npm test (run all application tests)
+# 
+# =============================================================================
