--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "figlet": "^1.8.2",
+    "geoip-lite": "^1.4.10",
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
