--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "bull": "^4.16.5",
     "chalk": "^4.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.0",
@@ -26,6 +27,7 @@
     "geoip-lite": "^1.4.10",
     "handlebars": "^4.7.8",
     "helmet": "^8.1.0",
+    "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb-memory-server": "^10.1.4",
     "mongoose": "^8.16.3",
@@ -33,6 +35,7 @@
     "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.5",
+    "redis": "^5.8.2",
     "socket.io": "^4.8.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
