--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose-aggregate-paginate-v2": "^1.1.4",
     "mongoose-autopopulate": "^1.2.1",
     "mongoose-paginate-v2": "^1.9.1",
+    "nodemon": "^3.1.11",
     "validator": "^13.15.23"
   },
   "repository": {
